update haystack to 2.x

--- a/saic/paste/templates/base.html
+++ b/saic/paste/templates/base.html
@@ -13,7 +13,7 @@
       <nav class='top-bar'>
           <ul>
               <li><a title='Create a new paste.' href='{% url "paste" %}'>New Paste</a></li>
-              <!--<li><a title='Search for pastes by others.' href='/search/'>Search</a></li>-->
+              <li><a title='Search for pastes by others.' href='/search/'>Search</a></li>
               <li><a title='Views a list of users' href='{% url "users" %}'>Users</a></li>
               <li><a title='All pastes' href='{% url "user_pastes" owner='all' %}'>All Pastes</a></li>
               <li>|</li>
