--- a/saic/paste/templates/search/search.html
+++ b/saic/paste/templates/search/search.html
@@ -8,62 +8,54 @@
 <div class='results'>
   <h1>Search</h1>
   <form method='GET'>
-    <div class='entry'>
-      {{ form.as_p}}
-      <br>
-    </div>
-    <div class='search-submit'>
-      <input type="submit" value="Search">
-    </div>
+    <input type="text" name="q">
+    <input type="submit" value="Search">
   </form>
 </div>
 
 {% if query %}
-<div class='results'>
+<div class="results">
   <h1>Results</h1>
-  <div class='entry'>
+  <div class="entry">
     <ol>
+      {% load highlight %}
       {% for result in page.object_list %}
+
+
+<!--       <li>
+        {{ result.paste }} -
+        {{ result.object.filename }} -
+        {{ result.content_type }} -
+        {{ result.get_absolute_url }} -
+        {{ result.object.commit }}
+      </li> -->
 
         {% if result.content_type == "paste.paste" %}
           <li>
-            <a href="{% url "paste_view" pk=result.object.revision.parent_set.pk %}">"{{ result.paste|slice:":80"}}... "</a> by 
-            {% if result.object.owner %}
-              <a href='{% url "owner_pastes" owner=result.object.owner.pk %}'>{{ result.object.owner }}</a>
-            {% else %}
-              <a href='{% url "anon_pastes" %}'>Anonymous</a>
-            {% endif %}
+            <a href='{% url "paste_view" pk=result.object.revision.parent_set.pk private_key=result.object.revision.parent_set.private_key %}?commit={{ result.object.revision.commit }}'>
+            {{ result.object.filename }} - {{ result.object.revision.commit|slice:":8"}}</a>
+            <!-- <a href="{% url "paste_view" pk=result.object.revision.parent_set.pk %}">
+              {{ result.object.filename }}
+            </a> -->
+            <br>
+            {% highlight result.object.paste with query %}
           </li>
         {% endif %}
 
-        {% if result.content_type == "paste.commit" %}
-          <li>
-            <a href="{% url "paste_view" pk=result.object.parent_set.pk %}?commit={{ result.object.commit }}">
-            {{ result.object.commit|slice:":8" }}</a>
-          
-            {% if result.object.parent_set.description %}
-              from
-              <a href='{% url "paste_view" pk=result.object.parent_set.pk %}'>{{result.object.parent_set.description }}</a>
-            {% endif %}
-            by
-            {% if result.object.owner %}
-              <a href='{% url "owner_pastes" owner=result.object.owner.pk %}'>{{ result.object.owner }}</a>
-            {% else %}
-              <a href='{% url "anon_pastes" %}'>Anonymous</a>
-            {% endif %}
-          </li>
-        {% endif %}
       {% empty %}
-      <p>No results found.</p>
-      {% endfor %}
+        <p>No results found.</p>
+
+      {% endfor%}
     </ol>
-    {% if page.has_previous or page.has_next %}
-      <div>
-        {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-        |
-        {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
-      </div>
-    {% endif %}
+  </div>
+  {% if page.has_previous or page.has_next %}
+    <div>
+      {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
+      |
+      {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+    </div>
   {% endif %}
 </div>
+{% endif %}
+
 {% endblock %}
